--- a/client/src/assets/css/components/index.css
+++ b/client/src/assets/css/components/index.css
@@ -10,3 +10,6 @@
 @import "profiles.css";
 @import "hero-banner.css";
 @import "slider.css";
+@import "modal.css";
+@import "machine-connector.css";
+@import "roles.css";
