--- a/client/src/assets/css/components/modal.css
+++ b/client/src/assets/css/components/modal.css
@@ -37,6 +37,16 @@
     height: auto;
 }
 
+.modal-create-role {
+    width: 30%;
+    background: var(--dark-aluminium);
+    border-radius: 1.5rem;
+
+    font-family: var(--font-primary);
+    font-style: normal;
+    font-weight: 300;
+}
+
 .modal-header,
 .modal-footer {
     padding: 2rem;
@@ -55,9 +65,22 @@
     text-align: center;
 }
 
+.modal-create-role-footer {
+    flex-direction: column;
+    justify-content: flex-end;
+    text-align: center;
+    margin-bottom: 2.0rem;
+}
+
 .modal-cert-text {
     height: 14rem;
     width: 65rem;
     font-size: 1.5rem;
+    outline-width: 0;
+}
+
+.modal-create-role-text {
+    height: 6rem;
+    font-size: 2.0rem;
     outline-width: 0;
 }
