--- a/client/src/assets/css/components/roles.css
+++ b/client/src/assets/css/components/roles.css
@@ -4,15 +4,20 @@
     padding: 3.2rem 6.4rem;
 }
 
+.roles__titlebar-grid {
+    display: block;
+}
+
+.roles__titlebar-container {
+    text-align: center;
+    margin-bottom: 2.5rem;
+}
+
 .roles__title {
     color: var(--white);
     font-weight: 600;
-    text-align: center;
-
-    /* responsive */
 
     margin-top: 0;
-    margin-bottom: 4.8rem;
 
     font-size: 3.2rem;
     line-height: 3.2rem;
@@ -47,8 +52,7 @@
 }
 
 .role__headline {
-    display: flex;
-    align-items: flex-start;
+
 
     margin-top: 0;
 
