--- a/client/src/assets/css/components/machines.css
+++ b/client/src/assets/css/components/machines.css
@@ -4,6 +4,12 @@
   padding: 3.2rem 6.4rem;
 }
 
+.machines__titlebar-grid {
+  display: block;
+  text-align: center;
+  margin-bottom: 1.0rem;
+}
+
 .machines__title {
   color: var(--white);
   font-weight: 600;
@@ -12,7 +18,7 @@
   /* responsive */
 
   margin-top: 0;
-  margin-bottom: 4.8rem;
+  margin-bottom: 1.5rem;
 
   font-size: 3.2rem;
   line-height: 3.2rem;
