--- a/client/src/assets/css/components/roles.css
+++ b/client/src/assets/css/components/roles.css
@@ -6,11 +6,13 @@
 
 .roles__titlebar-grid {
     display: block;
+    text-align: center;
+    margin-bottom: 1.0rem;
 }
 
 .roles__titlebar-container {
     text-align: center;
-    margin-bottom: 2.5rem;
+    margin-bottom: 1.5rem;
 }
 
 .roles__title {
