--- a/client/src/assets/css/components/index.css
+++ b/client/src/assets/css/components/index.css
@@ -10,3 +10,5 @@
 @import "modal.css";
 @import "machine-connector.css";
 @import "roles.css";
+@import "pagination.css";
+@import "search-box.css";
